# docs/swagger.json
@@ -780,6 +780,18 @@
                 }
             }
         },
+        "/fyc/debug": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Debug"
+                ],
+                "summary": "Debug API",
+                "responses": {}
+            }
+        },
         "/fyc/history": {
             "get": {
                 "description": "Get a list of all history records",
@@ -1517,30 +1529,35 @@
         },
         "/fyc/zonesImage": {
             "get": {
-                "description": "Get a list of all zones images",
+                "description": "Get a specific zoneimage by either ID or Zone",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Zones Image"
                 ],
-                "summary": "Get all zones image",
+                "summary": "Get zoneimage by field",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Include extra information if 'yes'",
-                        "name": "extra",
-                        "in": "query"
+                        "description": "Search by field (id or zone)",
+                        "name": "field",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Value of the selected field",
+                        "name": "value",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/pkg.ImageZone"
-                            }
+                            "$ref": "#/definitions/pkg.ImageZone"
                         }
                     }
                 }
@@ -1579,33 +1596,6 @@
             }
         },
         "/fyc/zonesImage/{id}": {
-            "get": {
-                "description": "Get a specific zoneimage by ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Zones Image"
-                ],
-                "summary": "Get zoneimage by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ZoneImage ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/pkg.ImageZone"
-                        }
-                    }
-                }
-            },
             "put": {
                 "description": "Update an existing zone image by ID",
                 "consumes": [
@@ -1694,6 +1684,37 @@
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/fyc/zonesImages": {
+            "get": {
+                "description": "Get a list of all zones images",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Zones Image"
+                ],
+                "summary": "Get all zones images",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Include extra information if 'yes'",
+                        "name": "extra",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/pkg.ImageZone"
+                            }
                         }
                     }
                 }
@@ -1913,22 +1934,13 @@
                     "type": "integer"
                 },
                 "image1": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "image2": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "image3": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 }
             }
         },
@@ -2010,16 +2022,10 @@
                     "type": "integer"
                 },
                 "image_l": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "image_s": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 },
                 "lang": {
                     "type": "string"
@@ -2194,9 +2200,6 @@
                 "zone_id"
             ],
             "properties": {
-                "ID": {
-                    "type": "integer"
-                },
                 "carpark_id": {
                     "type": "integer"
                 },
@@ -2206,6 +2209,9 @@
                 "extra": {
                     "type": "object",
                     "additionalProperties": true
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "max_capacity": {
                     "type": "integer"
